--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,6 +15,7 @@
     "@ignite-ui-magnago/react": "*",
     "@ignite-ui-magnago/tokens": "*",
     "@ignite-ui-magnago/ts-config": "*",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
