--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,16 +13,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-      
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+        
       - run: npm ci
 
       - run: npm run build
 
       - name: Deploy storybook
         working-directiory: ./packages/docs
-        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: touch storybook-static/.nojekyll && npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
