--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "dev": "storybook dev -p 6006",
+    "build-vite": "tsc && vite build",
     "build": "storybook build",
     "deploy-storybook": "build-storybook"
   },
