--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,7 @@
     "dev": "storybook dev -p 6006",
     "build-vite": "tsc && vite build",
     "build": "storybook build",
-    "deploy-storybook": "build-storybook"
+    "deploy-storybook": "build-storybook -s public"
   },
   "license": "MIT",
   "dependencies": {
